--- a/package.json
+++ b/package.json
@@ -1,24 +1,29 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "devices-for-kids",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "A fundraiser to give kids access to devices for learning",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Will Holmes <will@willholmes.dev>",
   "dependencies": {
+    "@mapbox/geo-viewport": "^0.4.1",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.5.0",
     "gatsby-plugin-manifest": "^2.6.1",
     "gatsby-plugin-offline": "^3.4.0",
+    "gatsby-plugin-postcss": "^3.5.0",
     "gatsby-plugin-react-helmet": "^3.4.0",
     "gatsby-plugin-sharp": "^2.8.0",
     "gatsby-source-filesystem": "^2.5.0",
     "gatsby-transformer-sharp": "^2.6.0",
+    "mapbox-gl": "^2.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
+    "postcss": "^8.2.4",
     "prettier": "2.2.1"
   },
   "keywords": [
