--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   ],
   "license": "0BSD",
   "scripts": {
-    "build": "npm ci && gatsby build",
+    "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
