--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Will Holmes <will@willholmes.dev>",
   "dependencies": {
     "@mapbox/geo-viewport": "^0.4.1",
+    "beautiful-react-hooks": "^0.31.0",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.5.0",
     "gatsby-plugin-manifest": "^2.6.1",
@@ -20,6 +21,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-slick": "^0.27.13",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
