--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-helmet": "^6.1.0",
     "react-slick": "^0.27.13",
     "slick-carousel": "^1.8.1",
-    "tailwindcss": "^2.0.2"
+    "tailwindcss": "^2.0.2",
+    "use-http": "^1.0.16"
   },
   "devDependencies": {
     "postcss": "^8.2.4",
